force-app/main/default/objects/DML__e/DML__e.object-meta.xml
<CustomObject>
    <label>DML</label>
    <pluralLabel>DMLs</pluralLabel>
</CustomObject>