force-app/main/default/objects/DML__e/fields/DML_type__c.field-meta.xml
<CustomField>
    <fullName>DML_type__c</fullName>
    <description>update, insert, delete</description>
    <label>DML type</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>