force-app/main/default/objects/DML__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object Api name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>