force-app/main/default/objects/DML__e/fields/Record_Json__c.field-meta.xml
<CustomField>
    <fullName>Record_Json__c</fullName>
    <label>Record Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>